--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,5 @@
+
+
 spring:
     datasource:
         hikari:
@@ -11,3 +13,10 @@ spring:
     jpa:
         hibernate:
             ddl-auto: update
+
+audit:
+    server:
+        host: localhost
+        port: 7000
+server:
+    port: 8081
