--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
         <querydsl-jpa.version>5.0.0</querydsl-jpa.version>
         <spring-shell-starter.version>2.1.0</spring-shell-starter.version>
+        <sonar.organization>lyoumi</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
